# TuColmadoRD-Monorepo

./: .deploy-trigger  .env.example  .gitignore  .gitmodules  CONTEXT.md  DATA-PERSISTENCE-GUARANTEE.md  Dockerfile  Dockerfile.jenkins  Jenkinsfile  LICENSE  PRODUCTION-TROUBLESHOOTING.md  README.md  SERVICE-AVAILABILITY-GUARANTEE.md  STARTUP.md  TuColmadoRD_AzureDevOps_Import.csv  azure-pipelines.yml  deploy-production.sh  docker-compose.jenkins.yml  docker-compose.local.yml  docker-compose.yml  migrate.sh  new_ruleset.json  package-lock.json  payload.json  remote_check_docker.js  ruleset.json
.docs/: DATA-PERSISTENCE-GUARANTEE.md  PRODUCTION-TROUBLESHOOTING.md  SERVICE-AVAILABILITY-GUARANTEE.md  STARTUP.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd-deploy.yml  ci-dev-to-qa.yml  ci-qa-to-main.yml  ci-services.yml  jenkins-setup.yml  release-test.yml
auth/: Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
auth/scripts/: generate-keys.ts
auth/src/: server.ts
auth/tests/: auth.test.ts  net-api.service.test.ts
backend/: .dockerignore  Dockerfile.api  Dockerfile.gateway  README.md  TuColmadoRD.slnx  docker-compose.yml
backend/installer/: setup.iss  terms-and-conditions.txt
frontend/: .dockerignore  .gitignore  README.md  package-lock.json  package.json
frontend/dist-desktop/: 3rdpartylicenses.txt
frontend/landing-page/: Dockerfile  README.md  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/scripts/: build-desktop.ps1
frontend/shared/: STYLE_RULES.md  design-tokens.css
frontend/web-admin/: .dockerignore  .gitignore  Dockerfile  README.md  angular.json  main.js  nginx.conf  (+7 more)
notification-service/: Dockerfile  package-lock.json  package.json  test-resend.mjs
scripts/: demo-record.ts  package-lock.json  package.json  seed-test-accounts.ts  start-all.ps1  update_word.py
services/catalog-service/: Cargo.toml  Dockerfile
services/catalog-service/src/: cache.rs  config.rs  db.rs  handlers.rs  main.rs  metrics.rs  models.rs  resilience.rs
services/reports-service/: Cargo.toml  Dockerfile
services/reports-service/src/: cache.rs  config.rs  db.rs  handlers.rs  main.rs  metrics.rs  models.rs  resilience.rs
(+837 files in other folders)
