[package]
name = "catalog-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "catalog-service"
path = "src/main.rs"

[dependencies]
axum             = { version = "0.8", features = ["macros"] }
tokio            = { version = "1",   features = ["full"] }
tower            = { version = "0.4", features = ["timeout", "limit", "util"] }
tower-http       = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }
serde            = { version = "1",   features = ["derive"] }
serde_json       = "1"
sqlx             = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
redis            = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
prometheus       = { version = "0.13", features = ["process"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
anyhow           = "1"
thiserror        = "1"
uuid             = { version = "1",   features = ["serde", "v4"] }
chrono           = { version = "0.4", features = ["serde"] }
dotenvy          = "0.15"
tokio-retry      = "0.3"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
